--- a/stories/index.html
+++ b/stories/index.html
@@ -436,7 +436,7 @@
     </tr>
     <tr>
       <td>0002</td>
-      <td><a href="/stories/yue/0002_睇吓農場動物_slides.html" target="_blank">睇吓農場動物</a></td>
+      <td><a href="/stories/yue/0002_睇吓農場嘅動物_slides.html" target="_blank">睇吓農場嘅動物</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0002"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
@@ -634,7 +634,7 @@
     </tr>
     <tr>
       <td>0141</td>
-      <td><a href="/stories/yue/0141_雞和千足蟲_slides.html" target="_blank">雞同千足蟲</a></td>
+      <td><a href="/stories/yue/0141_雞同千足蟲_slides.html" target="_blank">雞同千足蟲</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0141"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -694,7 +694,7 @@
     </tr>
     <tr>
       <td>0234</td>
-      <td><a href="/stories/yue/0234_球星安迪斯瓦_slides.html" target="_blank">球星安迪斯瓦</a></td>
+      <td><a href="/stories/yue/0234_球星安迪斯娃_slides.html" target="_blank">球星安迪斯娃</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
@@ -730,13 +730,13 @@
     </tr>
     <tr>
       <td>0291</td>
-      <td><a href="/stories/yue/0291_夫思家姐係點樣講_slides.html" target="_blank">夫思家姐係點樣講</a></td>
+      <td><a href="/stories/yue/0291_夫思家姐講咗嘅說話_slides.html" target="_blank">夫思家姐講咗嘅說話</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0294</td>
-      <td><a href="/stories/yue/0294_亞嫲嘅香蕉_slides.html" target="_blank">婆婆嘅香蕉</a></td>
+      <td><a href="/stories/yue/0294_婆婆嘅香蕉_slides.html" target="_blank">婆婆嘅香蕉</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -772,7 +772,7 @@
     </tr>
     <tr>
       <td>0327</td>
-      <td><a href="/stories/yue/0327_計動物_slides.html" target="_blank">計動物</a></td>
+      <td><a href="/stories/yue/0327_數動物_slides.html" target="_blank">數動物</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -784,7 +784,7 @@
     </tr>
     <tr>
       <td>0337</td>
-      <td><a href="/stories/yue/0337_蠟仔_slides.html" target="_blank">蠟仔</a></td>
+      <td><a href="/stories/yue/0337_蠟做嘅細路仔_slides.html" target="_blank">蠟做嘅細路仔</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
