--- a/stories/yue/0001_一個好高嘅人.html
+++ b/stories/yue/0001_一個好高嘅人.html
@@ -70,7 +70,7 @@ Cornelius Gulere<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
 
-<p>佢架單車太短啦。</p>
+<p>佢架單車太矮啦。</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Cornelius Gulere<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
 
-<p>佢離開咗間屋住入一個好大嘅森林入便。佢喺嗰便住咗好多年。</p>
+<p>佢離開咗間屋住入一個好大嘅森林入面。佢喺嗰便住咗好多年。</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
