--- a/stories/yue/0001_一個好高嘅人_slides.html
+++ b/stories/yue/0001_一個好高嘅人_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
-<p>佢架單車太短啦。</p>
+<p>佢架單車太矮啦。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>佢離開咗間屋住入一個好大嘅森林入便。佢喺嗰便住咗好多年。</p>
+<p>佢離開咗間屋住入一個好大嘅森林入面。佢喺嗰便住咗好多年。</p>
 <center>
 <strong>11</strong>
 </center>
