--- a/stories/yue/0002_睇吓農場嘅動物.html
+++ b/stories/yue/0002_睇吓農場嘅動物.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>整餸</title>
+    <title>睇吓農場嘅動物</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -41,70 +41,70 @@
     </style>
   </head>
   <body>
-<div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/01.jpg" />
+<div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/01.jpg" />
 
-<h1 id="section">整餸</h1>
+<h1 id="section">睇吓農場嘅動物</h1>
 
-Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>粵語</div><div class="pagebreak">
+Jenny Katz<br>粵語</div><div class="pagebreak">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/02.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/02.jpg" /></p>
 
-<p>我㓟緊薯仔。</p>
+<p>睇吓農場嘅動物。</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/03.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
 
-<p>我切緊椰菜。</p>
+<p>隻牛「哞哞」叫。</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/04.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
 
-<p>我磨緊紅蘿蔔。</p>
+<p>隻羊「咩咩」叫。</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/05.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/05.jpg" /></p>
 
-<p>我洗緊豆仔。</p>
+<p>隻馬「嘶嘶」叫。</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
 
-<p>我切緊冬南瓜。</p>
+<p>隻豬「唔唔」叫。</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/07.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/07.jpg" /></p>
 
-<p>我斫緊菠菜。</p>
+<p>隻雞「咯咯」叫。</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/08.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
 
-<p>阿媽切緊洋蔥。</p>
+<p>隻狗「汪汪」叫。</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/09.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/09.jpg" /></p>
 
-<p>每次切洋蔥我都會流眼水。</p>
+<p>農夫就話「殊」。</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>文:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>圖:</strong> Kathy Arbuckle<br /><strong>譯:</strong> dohliam<br /><strong>語言:</strong> 粵語</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/cooking">here</a>
+<p><strong>文:</strong> Jenny Katz<br /><strong>圖:</strong> Sandy Campbell<br /><strong>譯:</strong> dohliam<br /><strong>語言:</strong> 粵語</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/look-animals">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
