--- a/stories/yue/0009_我隻小貓貓喺邊度.html
+++ b/stories/yue/0009_我隻小貓貓喺邊度.html
@@ -63,14 +63,14 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>粵語</div><div class="page
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/04.jpg" /></p>
 
-<p>係唔係响碗櫃上便？</p>
+<p>係唔係响碗櫃上面？</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
 
-<p>係唔係响梳化後便？</p>
+<p>係唔係响梳化後面？</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>粵語</div><div class="page
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
 
-<p>係唔係响籃仔入便？</p>
+<p>係唔係响籃仔入面？</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
