--- a/stories/yue/0030_感情.html
+++ b/stories/yue/0030_感情.html
@@ -49,28 +49,28 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>粵語</div><div class="page
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
 
-<p>我心入便感到好多嘢。</p>
+<p>我心裡面感受到好多嘢。</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/03.jpg" /></p>
 
-<p>婆婆同我哋講古嘅時候，我感到好開心。</p>
+<p>婆婆同我哋講古仔嘅時候，我感到好開心。</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/04.jpg" /></p>
 
-<p>同朋友一齊玩嘅時候，我感到好攪笑。</p>
+<p>同朋友一齊玩嘅時候，我感到好搞笑。</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/05.jpg" /></p>
 
-<p>爹地話佢冇晒錢嘅時候，我感到好難過。</p>
+<p>爹哋話佢冇晒錢嘅時候，我感到好難過。</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
