--- a/stories/yue/0030_感情_slides.html
+++ b/stories/yue/0030_感情_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
-<p>我心入便感到好多嘢。</p>
+<p>我心裡面感受到好多嘢。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/03.jpg" /></p>
-<p>婆婆同我哋講古嘅時候，我感到好開心。</p>
+<p>婆婆同我哋講古仔嘅時候，我感到好開心。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/04.jpg" /></p>
-<p>同朋友一齊玩嘅時候，我感到好攪笑。</p>
+<p>同朋友一齊玩嘅時候，我感到好搞笑。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/05.jpg" /></p>
-<p>爹地話佢冇晒錢嘅時候，我感到好難過。</p>
+<p>爹哋話佢冇晒錢嘅時候，我感到好難過。</p>
 <center>
 <strong>4</strong>
 </center>
