--- a/stories/yue/0087_我好鍾意睇書.html
+++ b/stories/yue/0087_我好鍾意睇書.html
@@ -91,7 +91,7 @@ Letta Machoga<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/08.jpg" /></p>
 
-<p>爹地同爺爺都唔得閒。</p>
+<p>爹哋同爺爺都唔得閒。</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
