--- a/stories/yue/0095_贊瑪好勁.html
+++ b/stories/yue/0095_贊瑪好勁.html
@@ -49,7 +49,7 @@ Michael Oguttu<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
 
-<p>我細佬瞓過籠。我好早起身，因為我好勁！</p>
+<p>我細佬瞓到黃朝百晏。我好早起身，因為我好勁！</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -63,7 +63,7 @@ Michael Oguttu<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
 
-<p>媽咪就話：“你係我嘅晨星”。</p>
+<p>媽咪就話：「你係我嘅晨星」。</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Michael Oguttu<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
 
-<p>媽咪提醒我：“唔好唔記得咗刷牙。”我答佢話：“點可能，我唔會唔記得㗎！”</p>
+<p>媽咪提醒我：「唔好唔記得咗刷牙。」我答佢話：「點可能，我唔會唔記得㗎！」</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Michael Oguttu<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
 
-<p>然之後我自己著好衫。“媽咪，我已經大個女啦！”</p>
+<p>然之後我自己著好衫。「媽咪，我已經大個女啦！」</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Michael Oguttu<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/11.jpg" /></p>
 
-<p>喺翻學路上我同細佬講學校嘅所有消息。</p>
+<p>喺返學路上我同細佬講學校嘅所有消息。</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
