--- a/stories/yue/0095_贊瑪好勁_slides.html
+++ b/stories/yue/0095_贊瑪好勁_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
-<p>我細佬瞓過籠。我好早起身，因為我好勁！</p>
+<p>我細佬瞓到黃朝百晏。我好早起身，因為我好勁！</p>
 <center>
 <strong>1</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
-<p>媽咪就話：“你係我嘅晨星”。</p>
+<p>媽咪就話：「你係我嘅晨星」。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p>媽咪提醒我：“唔好唔記得咗刷牙。”我答佢話：“點可能，我唔會唔記得㗎！”</p>
+<p>媽咪提醒我：「唔好唔記得咗刷牙。」我答佢話：「點可能，我唔會唔記得㗎！」</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
-<p>然之後我自己著好衫。“媽咪，我已經大個女啦！”</p>
+<p>然之後我自己著好衫。「媽咪，我已經大個女啦！」</p>
 <center>
 <strong>8</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/11.jpg" /></p>
-<p>喺翻學路上我同細佬講學校嘅所有消息。</p>
+<p>喺返學路上我同細佬講學校嘅所有消息。</p>
 <center>
 <strong>10</strong>
 </center>
