--- a/stories/yue/0129_爛玩嘅細佬_slides.html
+++ b/stories/yue/0129_爛玩嘅細佬_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
-<p>點解我咁辛苦……但系細佬淨係掛住玩呢？</p>
+<p>點解我咁辛苦……但係細佬淨係掛住玩呢？</p>
 <center>
 <strong>7</strong>
 </center>
