--- a/stories/yue/0210_丁支同班牛_slides.html
+++ b/stories/yue/0210_丁支同班牛_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/08.jpg" /></p>
-<p>班士兵嗰個時候就翻嚟咗。</p>
+<p>跟住班士兵就返嚟。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/10.jpg" /></p>
-<p>有個士兵踩到咗丁支藏身嘅樹葉上便，但係丁支都冇出聲。</p>
+<p>有個士兵踩到丁支藏身嘅樹葉上面，但係丁支都冇出聲。</p>
 <center>
 <strong>9</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/12.jpg" /></p>
-<p>佢哋靜雞雞爬翻屋企。</p>
+<p>佢哋靜雞雞爬返屋企。</p>
 <center>
 <strong>11</strong>
 </center>
