--- a/stories/yue/0271_兩個.html
+++ b/stories/yue/0271_兩個.html
@@ -73,7 +73,7 @@ Carole Bloch<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
 
-<p>兩隻眼攞嚟睇吓啲嘢。</p>
+<p>兩隻眼攞嚟睇吓嘢。</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -85,7 +85,7 @@ Carole Bloch<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
 
-<p>兩隻小耳仔攞嚟聽吓啲嘢。</p>
+<p>兩隻小耳仔攞嚟聽吓嘢。</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
