--- a/stories/yue/0271_兩個_slides.html
+++ b/stories/yue/0271_兩個_slides.html
@@ -131,7 +131,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
-<p>兩隻眼攞嚟睇吓啲嘢。</p>
+<p>兩隻眼攞嚟睇吓嘢。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -148,7 +148,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
-<p>兩隻小耳仔攞嚟聽吓啲嘢。</p>
+<p>兩隻小耳仔攞嚟聽吓嘢。</p>
 <center>
 <strong>7</strong>
 </center>
