--- a/stories/yue/0291_夫思家姐講咗嘅說話_slides.html
+++ b/stories/yue/0291_夫思家姐講咗嘅說話_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>火 - Global African Storybook</title>
+  <title>夫思家姐講咗嘅說話 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="火" class="slide level1">
-<h1>火</h1>
+<section id="夫思家姐講咗嘅說話" class="slide level1">
+<h1>夫思家姐講咗嘅說話</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/02.jpg" /></p>
-<p>你睇吖，火！</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
+<p>一日朝頭早，夫思嘅嫲嫲叫佢過嚟就話：「夫思，你帶住呢隻雞蛋去你爹哋媽咪嗰便啦！你家姐行婚禮，佢哋想幫佢做個大蛋糕。」</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
-<p>火可以燒嘢。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/03.jpg" /></p>
+<p>夫思帶住隻雞蛋出發，佢喺路上遇到咗兩個摘緊生果嘅男仔。其中一個男仔搶咗隻雞蛋，掟咗去一棵樹度，隻雞蛋就爛咗。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
-<p>火可以煮嘢。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
+<p>夫思叫咗出嚟：「你搞咩嘢呀？隻雞蛋係攞嚟做蛋糕嘅，仲係俾我家姐嘅結婚蛋糕。結婚冇蛋糕，我家姐將會講咩嘢說話呢？」</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
-<p>火可以攞嚟取暖。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
+<p>兩個男仔整蠱完夫思之後覺得好對佢唔住。其中一個男仔就話：「我哋冇辦法幫你做蛋糕，但係我哋呢度有條木棍，可以送俾你姐姐。」噉夫思就帶上咗條木棍，繼續上路。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
-<p>火可以照明。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
+<p>夫思喺路上又碰到咗兩個起緊屋嘅工人。其中一個工人就問佢：「我哋可唔可以借你條木棍用一用呀？」但係條木棍唔係好實淨，仲斷埋添。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/07.jpg" /></p>
-<p>你睇吖，火！</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
+<p>夫思叫咗出嚟：「你搞咩嘢呀？條木棍係摘生果嘅人送俾我嘅，因為佢哋打爛咗攞嚟做蛋糕嘅雞蛋。嗰個蛋糕係送俾我家姐行婚禮嘅禮物。而家雞蛋又冇，蛋糕又冇，連禮物都冇埋，噉我家姐將會講咩嘢說話呢？」</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
-<p>火好神奇。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
+<p>起屋工人覺得好對唔住夫思，因為佢哋整斷咗佢條木棍。其中一個工人就話：「我哋冇辦法幫你做蛋糕，但我呢度有啲茅草，可以送俾你姐姐。」噉夫思就帶上咗茅草，繼續上路。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/09.jpg" /></p>
-<p>又好大威力。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/09.jpg" /></p>
+<p>喺路上，夫思遇到個農夫同佢隻乳牛。隻乳牛就話：「幾靚嘅茅草吖！我可唔可以試吓？」但係茅草太好味啦，乳牛一啖就全部都食晒啦！</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,57 @@
 </section>
 <section class="slide level1">
 
-<h2 id="火-1">火</h2>
-<strong>文:</strong> Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br> <strong>圖:</strong> Rob Owen<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
+<p>夫思叫咗出嚟：「你搞咩嘢呀？嗰啲茅草係俾我家姐嘅禮物。起屋工人俾咗嗰啲茅草我，係因為佢哋整斷咗摘生果嘅人俾我嘅木棍。摘生果嘅人俾咗條木棍我，又係因為佢哋打爛咗攞嚟做蛋糕嘅雞蛋。隻蛋糕係俾我家姐行婚禮嘅禮物。而家雞蛋又冇，蛋糕又冇，連禮物都冇埋，我家姐將會講咩嘢說話呢？」</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/11.jpg" /></p>
+<p>乳牛好對唔住，因為佢太過自私啦。農夫就決定俾乳牛跟住夫思行，作為送俾佢家姐嘅禮物。噉夫思就帶住隻乳牛，繼續上路啦。</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/12.jpg" /></p>
+<p>但係，到咗食晚飯嘅時候，隻乳牛走返咗農場，夫思亦都係途中蕩失路。佢好夜先至到家姐嘅婚禮度，嗰陣時啲客都已經喺度食緊飯囉。</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
+<p>夫思叫咗出嚟：「點算好呀？隻乳牛本來係農夫送俾我嘅禮物，因為乳牛食咗起屋工人俾我嘅茅草。起屋工人俾茅草我，係因為佢哋整斷咗摘生果嘅人俾我嘅木棍。摘生果嘅人俾咗條木棍我，係因為佢哋打爛咗攞嚟做蛋糕嘅雞蛋。嗰個蛋糕係俾我家姐行婚禮嘅禮物。而家雞蛋又冇，蛋糕又冇，連禮物都冇埋。」</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
+<p>夫思嘅家姐諗咗一陣，就話：「夫思，我嘅乖細佬，我唔志在有冇份禮物。我都唔介意有冇個蛋糕。我哋今日聚埋一齊，我就已經好開心啦。你快啲著埋飲衫，同我哋一齊慶祝啦！」於是乎夫思就照做喇。</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="夫思家姐講咗嘅說話-1">夫思家姐講咗嘅說話</h2>
+<strong>文:</strong> Nina Orange<br> <strong>圖:</strong> Wiehan de Jager<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/fire'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/what-vusis-sister-said'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
