--- a/stories/yue/0296_賣香蕉嘅湯姆_slides.html
+++ b/stories/yue/0296_賣香蕉嘅湯姆_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
-<p>大家就話：“喺我哋呢度，得女仔先會賣生果嘅”。佢哋仲問：“邊種男仔會去賣生果㗎？”</p>
+<p>大家就話：「喺我哋呢度，得女仔先會賣生果嘅」。佢哋仲問：「邊度有男仔會去賣生果㗎？」</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
-<p>但係湯姆都冇放棄。佢喺街市度叫賣：“快嚟買我啲香蕉！又靚又甜嘅香蕉！”</p>
+<p>但係湯姆都冇放棄。佢喺街市度叫賣：「快嚟買我啲香蕉！又靚又甜嘅香蕉！」</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
-<p>有個女仔由籃仔入便捉起一揪香蕉，好小心噉睇吓睇。</p>
+<p>有個女仔由個籃入面捉起一揪香蕉，好小心噉睇吓睇。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
-<p>冇幾耐呢，湯姆嘅籃仔就冇曬嘢㗎嘞，佢就計吓自己賣香蕉賺到嘅錢。</p>
+<p>冇幾耐，湯姆個籃就空晒，佢就計吓自己賣香蕉賺到嘅錢。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/12.jpg" /></p>
-<p>湯姆用呢啲錢買咗番梘、砂糖同埋麵包。佢擺呢啲嘢入佢嘅籃仔度。</p>
+<p>湯姆用呢啲錢買咗番梘、砂糖同埋麵包。佢擺呢啲嘢入佢個籃度。</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/13.jpg" /></p>
-<p>湯姆好定當噉就喺頭上面頂住個籃仔，翻咗屋企。</p>
+<p>湯姆好定當噉就用個頭頂住個籃返屋企。</p>
 <center>
 <strong>12</strong>
 </center>
