--- a/stories/yue/0004_山羊、野狗、同水牛_slides.html
+++ b/stories/yue/0004_山羊、野狗、同水牛_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
-<p>當佢哋到咗目的地嘅時候，司機叫佢哋交車飛。水牛畀咗自己嗰份。</p>
+<p>當佢哋到咗目的地嘅時候，司機叫佢哋交車飛。水牛俾咗自己嗰份。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
-<p>野狗冇帶散紙，所以佢就畀多咗少少。</p>
+<p>野狗冇帶散紙，所以佢就俾多咗少少。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
-<p>司機正要畀野狗找數，估唔到山羊冇畀錢就走甩咗。</p>
+<p>司機正要俾野狗找數，估唔到山羊冇俾錢就走甩咗。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
-<p>司機好嬲，結果佢冇畀野狗找數就開走咗。</p>
+<p>司機好嬲，結果佢冇俾野狗找數就開走咗。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
-<p>所以，而家呢你可以見到野狗佢見到有車嚟就搏晒命追埋去，因為佢想叫司機畀佢找數。</p>
+<p>所以，而家呢你可以見到野狗佢見到有車嚟就搏晒命追埋去，因為佢想叫司機俾佢找數。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
-<p>山羊呢，聽親有車嚟就嚇到趕快逃走，因為佢驚冇交車飛就會畀人捉咗。</p>
+<p>山羊呢，聽親有車嚟就嚇到趕快逃走，因為佢驚冇交車飛就會俾人捉咗。</p>
 <center>
 <strong>7</strong>
 </center>
