--- a/stories/yue/0006_阿南西與智慧.html
+++ b/stories/yue/0006_阿南西與智慧.html
@@ -49,16 +49,16 @@ Ghanaian folktale<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
 
-<p>好耐好耐之前，人類乜都不識。
+<p>好耐好耐之前，人類乜都唔識。
 佢哋唔識點耕田織布，亦都唔識點做鐵嘢。
-因為天上嘅尼亞美神將世界所有智慧都柄埋响個瓦煲入便。</p>
+因為天上嘅尼亞美神將世界所有智慧都柄埋响個瓦煲入面。</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
 
-<p>有日，尼亞美決定將智慧瓦煲交畀蜘蛛神阿南西。
+<p>有日，尼亞美決定將智慧瓦煲交俾蜘蛛神阿南西。
 每次阿南西打開瓦煲睇入去，佢就會學到新嘢，真係好興奮！</p>
 
 <div class="pagenum">2</div>
@@ -67,9 +67,9 @@ Ghanaian folktale<br>粵語</div><div class="pagebreak">
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
 
 <p>貪心嘅阿南西同自己講，
-“我將瓦煲擺响樹頂上便，噉樣所有嘅智慧都剩係屬於我嘅！”
+「我將瓦煲擺响樹頂上面，噉樣所有嘅智慧都剩係屬於我嘅！」
 所以，佢織咗條長長嘅絲線出嚟，將瓦煲纊實，然後將絲線另外一端綁住响自己個肚度。
-佢開始擒上嗰樖樹，
+佢開始擒上嗰棵樹，
 但係瓦煲成日撞到自己隻腳，擒起上嚟好辛苦。</p>
 
 <div class="pagenum">3</div>
@@ -78,7 +78,7 @@ Ghanaian folktale<br>粵語</div><div class="pagebreak">
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
 
 <p>阿南西個仔由樹底下乜都見到晒啦。
-佢同阿南西講，“將瓦煲孭住喺背脊上面咪就更加容易吖嗎？”
+佢同阿南西講，「將瓦煲孭住喺背脊上面咪就更加容易囉？」
 於是乎阿南西就孭起咗個瓦煲，果然容易好多。</p>
 
 <div class="pagenum">4</div>
@@ -88,7 +88,7 @@ Ghanaian folktale<br>粵語</div><div class="pagebreak">
 
 <p>阿南西好快就爬到樹頂上。
 但係佢突然諗到一個問題：
-“世界所有嘅智慧而家應該係屬於我嘅啦，但係頭先我個仔竟然叻過我嘞喎！”
+「世界所有嘅智慧而家應該係屬於我嘅啦，但係頭先我個仔竟然叻過我嘞喎！」
 阿南西激到爭啲跳起上嚟，佢嬲到竟然將個瓦煲掟到地下。</p>
 
 <div class="pagenum">5</div>
@@ -96,7 +96,7 @@ Ghanaian folktale<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
 
-<p>瓦煲一落地就碎成千幾小片。
+<p>瓦煲一落地就變成碎片。
 瓦煲打爛咗，世界所有嘅智慧亦都走咗出嚟，等大家自由分享。
 就係噉，世界嘅人民先至學識點耕田、點織布，點打鐵做鐵器，仲有所有而家啲人識做嘅一切。</p>
 
