--- a/stories/yue/0009_我隻小貓貓喺邊度_slides.html
+++ b/stories/yue/0009_我隻小貓貓喺邊度_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/04.jpg" /></p>
-<p>係唔係响碗櫃上便？</p>
+<p>係唔係响碗櫃上面？</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
-<p>係唔係响梳化後便？</p>
+<p>係唔係响梳化後面？</p>
 <center>
 <strong>4</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
-<p>係唔係响籃仔入便？</p>
+<p>係唔係响籃仔入面？</p>
 <center>
 <strong>6</strong>
 </center>
