--- a/stories/yue/0027_決定_slides.html
+++ b/stories/yue/0027_決定_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/08.jpg" /></p>
-<p>翻風嘅時候，啲廢紙就周圍亂噉飛，掛喺樹頂同籬笆上面。</p>
+<p>返風嘅時候，啲廢紙就周圍亂噉飛，掛喺樹頂同籬笆上面。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
-<p>碎玻璃掟到周圍都係，好多人都被碎玻璃劃親。</p>
+<p>玻璃碎掟到周圍都係，好多人都被玻璃碎劃親。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
-<p>我老竇一家一家噉勸人，召集條村嘅居民開會。</p>
+<p>我老竇逐家逐戶噉勸人，召集條村嘅居民開會。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/12.jpg" /></p>
-<p>大家聚到一樖大樹底下，準備開會。</p>
+<p>大家聚到一棵大樹底下，準備開會。</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
-<p>我老竇企咗起身，話：“我哋一定要團結合作，解決我哋嘅問題。”</p>
+<p>我老竇企咗起身，話：「我哋一定要團結合作，解決我哋嘅問題。」</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
-<p>八歲嘅珠瑪坐喺樹幹上面，大聲噉就話：“我可以幫手清理條村。”</p>
+<p>八歲嘅珠瑪坐喺樹幹上面，大聲噉就話：「我可以幫手清理條村。」</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/15.jpg" /></p>
-<p>一個女人又企咗起身話：“我可以搵班女仔，一齊種莊稼。”</p>
+<p>一個女人又企咗起身話：「我可以搵班女仔，一齊種莊稼。」</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/16.jpg" /></p>
-<p>又有一個男人企起身話：“班男仔可以幫住打井。”</p>
+<p>又有一個男人企起身話：「班男仔可以幫住打井。」</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
-<p>我哋異口同聲噉就話：“我哋一定要改變我哋嘅生活。”由嗰日開始，大家都齊心協力，解決問題。</p>
+<p>我哋異口同聲噉就話：「我哋一定要改變我哋嘅生活。」由嗰日開始，大家都齊心協力，解決問題。</p>
 <center>
 <strong>16</strong>
 </center>
