--- a/stories/yue/0066_羅姿卑妮同三條頭髮_slides.html
+++ b/stories/yue/0066_羅姿卑妮同三條頭髮_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
-<p>天時好熱，佢哋咪跳入河遊吓水。佢哋一路游水，一路玩，瀄出好多水花。</p>
+<p>天時好熱，佢哋就跳入河遊吓水。佢哋一路游水，一路玩，瀄出好多水花。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
-<p>突然間，佢哋留意到時間已經好晏嘞，急急腳趕翻條村。</p>
+<p>突然間，佢哋留意到時間已經好晏嘞，急急腳趕返條村。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
-<p>當佢哋就快翻到屋企嘅時候，羅姿卑妮摸吓條頸，發現唔見咗條頸鏈嘞。佢噅求兩個好友就話：“同我一齊翻去搵吓啦！”但係佢嘅朋友都話太晏啦。</p>
+<p>當佢哋就快返到屋企嘅時候，羅姿卑妮摸吓條頸，發現唔見咗條頸鏈嘞。佢噅求兩個好友就話：「同我一齊返去搵吓啦！」但係佢嘅朋友都話太晏啦。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
-<p>羅姿卑妮一個人翻到河邊，搵到咗條頸鏈，快快脆脆翻屋企，但係已經黑孖孖，噉佢就蕩失路啦。</p>
+<p>羅姿卑妮一個人返到河邊，搵到咗條頸鏈，快快脆脆返屋企，但係已經黑孖孖，噉佢就蕩失路啦。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
-<p>羅姿卑妮嚇咗一跳，因為開門嘅竟然係一隻識講嘢嘅狗：“你嚟做咩嘢？”羅姿卑妮就話：“我蕩失路嘞，我要搵個地方瞓覺。”隻狗答咗佢就話：“入嚟啦，唔係我就咬你！”噉羅姿卑妮就入咗間屋。</p>
+<p>羅姿卑妮嚇咗一跳，因為開門嘅竟然係一隻識講嘢嘅狗：「你嚟做咩嘢？」羅姿卑妮就話：「我蕩失咗路，要搵個地方瞓覺。」隻狗答咗佢就話：「入嚟啦，唔係我就咬你！」噉羅姿卑妮就入咗間屋。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
-<p>隻狗就話：“俾我煮飯！”羅姿卑妮答咗佢就話：“但係我從來都冇試過俾隻狗煮飯喎。”隻狗就話：“快啲煮飯啦，唔係我就咬你！”羅姿卑妮冇辦法，唯有俾隻狗煮啲嘢食啦。</p>
+<p>隻狗就話：「煮飯俾我食！」羅姿卑妮答咗佢就話：「但係我從來都冇試過煮飯俾狗食喎。」隻狗就話：「快啲煮飯啦，唔係我就咬你！」羅姿卑妮冇辦法，唯有煮啲嘢俾隻狗食啦。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
-<p>狗就話：“俾我鋪床！”羅姿卑妮答咗佢就話：“但係我從來都冇試過俾隻狗鋪床喎。”隻狗就話：“快啲鋪床啦，唔係我就咬你！”羅姿卑妮冇辦法，唯有俾隻狗鋪床啦。</p>
+<p>狗就話：「幫我鋪床！」羅姿卑妮答咗佢就話：「但係我從來都冇試過俾幫狗鋪床喎。」隻狗就話：「快啲鋪床啦，唔係我就咬你！」羅姿卑妮冇辦法，唯有幫隻狗鋪床啦。</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
-<p>羅姿卑妮每日都要俾隻狗煮飯，打掃間屋，仲有洗衫。有一日呢，隻狗就話：“羅姿卑妮，我今日要出門見朋友。喺我翻嚟之前，你要打掃好間屋，煮好飯，洗好衫。”</p>
+<p>羅姿卑妮每日都要幫隻狗煮飯，打掃間屋，仲有洗衫。有一日呢，隻狗就話：「羅姿卑妮，我今日要出門見朋友。喺我返嚟之前，你要打掃好間屋，煮好飯，洗好衫。」</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
-<p>隻狗一走親，羅姿卑妮就由頭上面擝咗三條頭髮落嚟。佢放咗一條頭髮喺張床底下，放咗一條喺道門背後，仲有一條放喺個圍欄上面。然之後羅姿卑妮起勢噉走咗翻屋企。</p>
+<p>隻狗一走，羅姿卑妮就喺頭上面擝咗三條頭髮落嚟。佢放咗一條頭髮喺張床底下，一條喺道門背後，仲有一條喺個圍欄上面。然之後羅姿卑妮起勢噉走咗返屋企。</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
-<p>隻狗翻到屋企之後，就開始搵羅姿卑妮：“羅姿卑妮，你喺邊度呀？”第一條頭髮就話：“我喺呢度，喺張床底下。”第二條頭髮就話：“我喺呢度，喺道門背後。”第三條頭髮就話：“我喺呢度，喺個圍欄上面。”</p>
+<p>隻狗返到屋企之後，就開始搵羅姿卑妮：「羅姿卑妮，你喺邊度呀？」第一條頭髮就話：「我喺呢度，喺張床底下。」第二條頭髮就話：「我喺呢度，喺道門背後。」第三條頭髮就話：「我喺呢度，喺個圍欄上面。」</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
-<p>隻狗明白到羅姿卑妮出咗術呃佢。佢一味走到羅姿卑妮條村嗰度，但係羅姿卑妮班兄弟正攞晒啲棍仔出嚟等住佢呢！隻狗見狀不妙，急急腳鬆人走咗嘞，以後就冇人再見過佢啦。</p>
+<p>隻狗明白到羅姿卑妮出咗術呃佢。佢一味走到羅姿卑妮條村嗰度，但係羅姿卑妮班兄弟正攞晒啲棍仔出嚟等住佢呢！隻狗見形勢不妙，急急腳鬆人走咗，以後就冇人再見過佢啦。</p>
 <center>
 <strong>13</strong>
 </center>
