--- a/stories/yue/0067_整餸_slides.html
+++ b/stories/yue/0067_整餸_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/08.jpg" /></p>
-<p>亞媽切緊洋蔥。</p>
+<p>阿媽切緊洋蔥。</p>
 <center>
 <strong>7</strong>
 </center>
