--- a/stories/yue/0089_同植物講嘢嘅卡麗_slides.html
+++ b/stories/yue/0089_同植物講嘢嘅卡麗_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p>呢個係卡麗。佢今年七歲。喺肯雅嘅當地方言入便，呢個名係“好人”嘅意思。</p>
+<p>呢個係卡麗。佢今年七歲。喺肯雅嘅當地方言入面，呢個名係「好人」嘅意思。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p>卡麗朝頭早醒翻嚟，同樖橙樹就話：“橙樹吖，唔該你快高長大啦，俾我哋結好多又大又甜嘅橙仔！”</p>
+<p>卡麗朝頭早醒返嚟，同棵橙樹講：「橙樹吖，唔該你快高長大啦，生啲又大又甜嘅橙俾我哋！」</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p>喺卡麗行路翻學嘅路上佢就同草地講嘢話：“草地吖，唔該你一定要生到綠茵茵㗎，唔好乾枯晒啦。”</p>
+<p>喺卡麗行路返學嘅路上佢就同草地講：「草地吖，唔該你一定要生綠啲，唔好乾枯晒吖。」</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p>卡麗路過啲野花，佢就同啲野花講：“野花吖，唔該你哋盡情噉開放啦，噉我可以喺我頭髮上面夾住你哋啦。”</p>
+<p>卡麗路過啲野花，佢就同啲野花講：「野花吖，唔該你哋一路開花唔好停啦，等我可以將你放喺頭上面。」</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p>喺學校度，卡麗同操場中間嘅小樹就話：“小樹吖，唔該你快啲生出枝葉㗎，噉我哋就可以喺樹蔭中讀書啦。”</p>
+<p>喺學校度，卡麗同操場中間嘅小樹就話：「小樹吖，唔該你生多啲又粗又大嘅樹枝啦，噉我哋就可以喺樹蔭中讀書啦。」</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p>卡麗仲同學校左近嘅灌木叢就話：“灌木吖，唔該你哋一定要生到壯壯㗎，噉衰人就唔入得嚟學校啦。”</p>
+<p>卡麗仲同學校左近嘅灌木叢就話：「灌木吖，唔該你哋生得強壯啲，噉啲衰人就唔入到嚟學校啦。」</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p>當卡麗由學校翻到屋企，佢又去睇吓樖橙樹，問佢話：“你結咗橙仔未呀？”</p>
+<p>當卡麗由學校返到屋企，佢又去睇吓棵橙樹，問佢話：「你啲橙熟未呀？」</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p>卡麗歎咗啖氣就話：“啲橙仔仲係綠色嘅，我聽日再嚟睇吓你啦！或者聽日你就會俾隻又大又甜嘅橙仔我嘞！”</p>
+<p>卡麗唉聲嘆氣噉話：「啲橙仔仲係綠色嘅，我聽日再嚟睇吓你啦！或者聽日你就會俾隻又熟又甜嘅橙我嘞！」</p>
 <center>
 <strong>8</strong>
 </center>
