--- a/stories/yue/0110_一粒小種子：旺加里·馬塔伊嘅故仔.html
+++ b/stories/yue/0110_一粒小種子：旺加里·馬塔伊嘅故仔.html
@@ -49,7 +49,7 @@ Nicola Rijsdijk<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
 
-<p>喺東非肯雅山嘅半山度，有条小村，村入便有個小女仔同佢媽咪一齊喺農田度做嘢，呢個女仔叫做旺加里。</p>
+<p>喺東非肯雅山嘅半山度，有條小村，村入面有個女仔同佢媽咪一齊喺農田度做嘢，呢個女仔叫做旺加里。</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -63,70 +63,70 @@ Nicola Rijsdijk<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
 
-<p>佢每日最鍾意嘅時間就係日落時分。當天黑咗，睇唔到花花草草嘅時候，旺加里就知道佢應該翻屋企喇。佢喺穿過農田嘅小路徑度行行吓，有啲時仲要遇水過河添。</p>
+<p>佢每日最鍾意嘅時間就係日落時分。當天黑咗，睇唔到花花草草嘅時候，旺加里就知道佢應該返屋企喇。佢喺穿過農田嘅小路徑度行行吓，有啲時仲要遇水過河添。</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/05.jpg" /></p>
 
-<p>旺加里係一個好叻嘅細路女，佢急不及待噉想要去翻學，但係佢爹地媽咪就希望佢留喺屋企度幫手做嘢。旺加里七歲嗰陣時，佢大佬終於說服咗爹地媽咪，俾旺加里去翻學。</p>
+<p>旺加里係一個好叻嘅細路女，佢急不及待噉想要去返學，但係佢爹哋媽咪就希望佢留喺屋企度幫手做嘢。旺加里七歲嗰陣時，佢大佬終於說服咗爹哋媽咪，俾旺加里去返學。</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/06.jpg" /></p>
 
-<p>旺加里好鍾意學嘢啦！佢讀咗好多書，仲學到咗好多知識。佢嘅成績非常之好，好到後尾佢收到咗美國大學嘅錄取信，邀請佢去美國讀書。旺加里太開心喇，佢真係好想去到世界各地周圍學嘢睇吓。</p>
+<p>旺加里好鍾意學嘢㗎！佢讀咗好多書，仲學到咗好多知識。佢嘅成績非常之好，好到有美國嘅大學寄錄取信嚟，邀請佢去美國讀書。旺加里太開心喇，佢真係好想去世界各地周圍見識吓。</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
 
-<p>喺美國大學嗰便，旺加里學到咗好多新嘢。佢研究植物同佢哋嘅生長過程。佢諗起自己係點樣大個咗：同班兄弟喺美麗嘅肯雅森林度玩遊戲。</p>
+<p>喺美國大學嗰便，旺加里學到好多新嘢。佢研究植物同佢哋嘅生長過程。佢諗起自己係點樣長大嘅：同班兄弟喺美麗嘅肯雅森林度玩遊戲。</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/08.jpg" /></p>
 
-<p>佢學得越多，就越熱愛肯雅人民。佢想要幫助肯雅人民過上自由、快樂嘅生活。佢學得越多，就越掛住自己喺非洲嘅家鄉。</p>
+<p>佢學得越多，就越熱愛肯雅人民。佢想幫助肯雅人民過自由、快樂嘅生活。佢學得越多，就越掛住自己喺非洲嘅家鄉。</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/09.jpg" /></p>
 
-<p>旺加里完成咗學業之後，佢就翻去咗肯雅，但係佢嘅祖國已經今非昔比啦。周圍都係新起咗嘅農場，婦女都搵唔到柴嚟做飯。人哋過住窮苦嘅日子，佢哋嘅細蚊仔又飢腸轆轆。</p>
+<p>旺加里完成咗學業之後，佢就返去咗肯雅，但係佢嘅祖國已經今非昔比啦。周圍都係新起咗嘅農場，婦女都搵唔到柴嚟做飯。人哋過住窮苦嘅日子，佢哋嘅細蚊仔又飢腸轆轆。</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/10.jpg" /></p>
 
-<p>旺加里知道自己要做乜嘢嘞。佢教咗啲婦女點樣用種子種出大樹。啲婦女賣樹賺錢，補貼家用。啲婦女都好開心。旺加里令到佢哋覺得自己變得堅強勇敢嘞。</p>
+<p>旺加里知道自己要做乜嘢嘞。佢教咗啲婦女點樣用種子種出大樹。啲婦女賣樹賺錢，補貼家用。啲婦女都好開心。旺加里令到佢哋覺得自己變得堅強勇敢。</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/11.jpg" /></p>
 
-<p>時光飛逝，小樹長成咗參天大樹，又匯聚成咗森林，河水穿流而過。旺加里嘅辦法傳遍咗成個非洲。今日，因為旺加里當初嘅種子，已經長出咗幾百萬樖大樹。</p>
+<p>時光飛逝，小樹長成參天大樹，又匯聚成森林，河水穿流而過。旺加里嘅辦法傳遍咗成個非洲。今日，因為旺加里當初嘅種子，已經長出咗幾百萬棵大樹。</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/12.jpg" /></p>
 
-<p>旺加里努力工作，引起了全世界人嘅注意，人哋授予佢諾貝爾和平獎，佢係非洲第一位獲得呢個殊榮嘅女性。</p>
+<p>旺加里一直都好努力噉做嘢。全世界嘅人都注意到佢嘅工作，仲頒咗個好出名嘅獎俾佢，叫做諾貝爾和平獎。佢亦都係非洲第一位獲得呢個殊榮嘅女性。</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/13.jpg" /></p>
 
-<p>旺加里喺2011年過身，但係每次我哋見到樖大樹嘅時候，都會諗翻起呢位傑出嘅女性。</p>
+<p>旺加里喺2011年過身，但係每次我哋見到棵大樹嘅時候，都會諗返起呢位傑出嘅女士。</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
