--- a/stories/yue/0129_爛玩嘅細佬.html
+++ b/stories/yue/0129_爛玩嘅細佬.html
@@ -91,7 +91,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>粵語</div><div class="page
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
 
-<p>點解我咁辛苦……但系細佬淨係掛住玩呢？</p>
+<p>點解我咁辛苦……但係細佬淨係掛住玩呢？</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
