--- a/stories/yue/0141_雞同千足蟲_slides.html
+++ b/stories/yue/0141_雞同千足蟲_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>火 - Global African Storybook</title>
+  <title>雞同千足蟲 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="火" class="slide level1">
-<h1>火</h1>
+<section id="雞同千足蟲" class="slide level1">
+<h1>雞同千足蟲</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/02.jpg" /></p>
-<p>你睇吖，火！</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
+<p>雞同千足蟲係好朋友嚟，但係佢哋乜都鬥一餐。有日，佢哋決定搞場踢波比賽，睇吓邊個係最勁嘅球員。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
-<p>火可以燒嘢。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
+<p>佢哋去咗波場，開始比賽。雞走得飛噉快，但係千足蟲走得更加快。雞將個波踢到好遠，但係千足蟲踢到更加遠。雞開始有啲悶悶不樂。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
-<p>火可以煮嘢。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
+<p>最後，佢哋決定嚟一場十二碼大戰。喺第一輪，千足蟲守龍門，雞淨係攞到一分。然之後，喺第二輪，雞就做龍門。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
-<p>火可以攞嚟取暖。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
+<p>千足蟲大力一踢，個波入咗。千足蟲運球飛快，又入咗一球。千足蟲跳咗起上嚟，頂咗個頭鎚，又得咗一分。千足蟲一共得咗五分。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
-<p>火可以照明。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
+<p>雞輸咗就好嬲。千足蟲哈哈大笑，因為佢嘅朋友輸咗波，就發爛渣。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/07.jpg" /></p>
-<p>你睇吖，火！</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
+<p>雞嬲到飛起，佢擘開個口，一啖就吞咗條千足蟲落去。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
-<p>火好神奇。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
+<p>雞返屋企路上，遇到千足蟲嘅媽咪。千足蟲媽咪就問佢：「你有冇見到我個仔？」雞乜都冇講，千足蟲媽咪就好擔心。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/09.jpg" /></p>
-<p>又好大威力。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
+<p>千足蟲媽咪突然間聽到咗把好微弱嘅聲音：「快啲嚟幫我吖，媽咪！」千足蟲媽咪睇吓睇周圍，認真聽住，把聲係由雞身入面傳出嚟㗎。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,48 @@
 </section>
 <section class="slide level1">
 
-<h2 id="火-1">火</h2>
-<strong>文:</strong> Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br> <strong>圖:</strong> Rob Owen<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
+<p>千足蟲媽咪大叫道：「快啲用你嘅神力！」千足蟲會產生一種好難聞嘅味道，會令到雞作嘔。</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
+<p>雞打咗思噎，咕嚕咕嚕想作嘔，又打乞嗤又咳。千足蟲太嘔心喇！</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
+<p>雞不停噉咳，直到胃入面條千足蟲咳咗出嚟為止。千足蟲媽咪同個仔急住爬上樹，匿埋咗。</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
+<p>由嗰個時候開始，雞同千足蟲就變成敵人嘞。</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="雞同千足蟲-1">雞同千足蟲</h2>
+<strong>文:</strong> Winny Asara<br> <strong>圖:</strong> Winny Asara<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/fire'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/chicken-and-millipede'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
