--- a/stories/yue/0158_雞乸同老鷹.html
+++ b/stories/yue/0158_雞乸同老鷹.html
@@ -56,63 +56,63 @@ Ann Nduku<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
 
-<p>有一日呢，佢哋住嘅地方發生咗場大飢荒。老鷹成日要走好遠好遠先至可以搵到嘢食。噉佢翻嚟嘅時候就癐拉拉啦。老鷹就話：“噉樣做嘢實在太癐啦，肯定有個更加慳力嘅辦法。”</p>
+<p>有一日，佢哋住嘅地方有大飢荒。老鷹成日要走好遠好遠先至可以搵到嘢食。噉佢返嚟嘅時候就癐拉拉啦。老鷹就話：「噉樣做嘢實在太癐啦，肯定有個更加慳力嘅辦法。」</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
 
-<p>雞乸瞓飽咗成晚，就諗出咗個好計。佢開始搵埋其他雀仔掉落嚟嘅羽毛，就話：“等我哋將呢啲羽毛都縫住喺我哋身上啦，或者可以行路就唔使咁辛苦啦。”</p>
+<p>雞乸瞓飽咗成晚，就諗到個好計。佢開始搵埋其他雀仔掉落嚟嘅羽毛，就話：「等我哋將呢啲羽毛都縫住喺我哋身上啦，或者噉樣行路就唔使咁辛苦啦。」</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
 
-<p>老鷹呢就係成條村入便唯一個有眼針嘅雀仔，所以佢第一個開始縫羽毛。佢俾自己做咗對非常之靚嘅翼仔，做完之後呢，就响雞乸頭上面飛嚟飛去。雞乸問老鷹借咗眼針過嚟，但係佢好快就厭咗縫紉工作。噉佢就將針頭留喺櫃桶度，跑咗去廚房俾細蚊仔煮飯。</p>
+<p>成條村入面只得老鷹一個有針，所以佢第一個開始縫羽毛。佢整咗對非常之靚嘅翼俾自己，做完之後呢，就响雞乸頭上面飛嚟飛去。雞乸問老鷹借咗眼針過嚟，但係佢好快就厭咗縫紉工作。噉佢就將針頭留喺櫃桶度，跑咗去廚房俾細蚊仔煮飯。</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
 
-<p>其他雀仔見到老鷹飛得又高又遠，非常之羨慕。佢哋問雞乸借咗針頭，噉樣佢哋也可以俾自己做埋翼仔添。過咗冇幾耐之後呢，其他雀仔亦都飛晒上天啦。</p>
+<p>其他雀仔見到老鷹飛得又高又遠，非常之羨慕。佢哋問雞乸借咗針頭，噉樣佢哋就可以幫自己整對翼喇。過咗冇幾耐之後呢，其他雀仔亦都飛晒上天啦。</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
 
-<p>當最後一隻雀仔嚟歸還翻眼針嘅時候，雞乸唔喺屋企。佢嘅細蚊仔攞走咗眼針，玩嚟玩去。佢哋玩厭嘅時候，就將針頭留低咗喺沙地度。</p>
+<p>當最後一隻雀仔嚟還返眼針嘅時候，雞乸唔喺屋企。佢嘅細蚊仔攞走咗眼針，玩嚟玩去。佢哋玩厭嘅時候，就將針頭留低咗喺沙地度。</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
 
-<p>嗰日晏晝，老鷹翻咗嚟，佢問雞乸要翻自己嗰眼針，因為佢要修補啲鬆散嘅羽毛。雞乸喺櫃桶、廚房同後院搵佢，但係點都搵唔到眼針出嚟。</p>
+<p>嗰日晏晝，老鷹返咗嚟，佢問雞乸要返自己嗰眼針，因為佢要修補啲鬆散嘅羽毛。雞乸喺櫃桶、廚房同後院搵佢，但係點都搵唔到眼針出嚟。</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
 
-<p>雞乸噅老鷹就話：“再俾一日時間我啦！聽日你就可以修補對翼，飛去搵嘢食啦。”老鷹就話：“好吖，就俾多日你。如果你仲搵唔翻眼針嘅話，你就要俾你一個細蚊仔我作為補償。”</p>
+<p>雞乸噅老鷹就話：「再俾一日時間我啦！聽日你就可以修補對翼，飛去搵嘢食啦。」老鷹就話：「好吖，就俾多日你。如果你仲搵唔返眼針嘅話，你就要俾你一個細蚊仔我作為補償。」</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
 
-<p>第二日呢，老鷹嚟咗，佢見到雞乸正喺沙地入便搲嚟搲去，但係都係搵唔翻嗰眼針嚟。於是乎老鷹就由天上俯衝落嚟，捉到隻小雞仔就飛走咗。由嗰日之後呢，無論老鷹幾時喺天上面出現呢，佢都會見到雞乸喺沙地度搵緊針頭。</p>
+<p>第二日，老鷹嚟咗，佢見到雞乸正喺沙地入面搲嚟搲去，但係都係搵唔返嗰眼針嚟。於是乎老鷹就由天上俯衝落嚟，捉咗隻小雞仔就飛走。由嗰日之後呢，無論老鷹幾時喺天上面出現呢，佢都會見到雞乸喺沙地度搵緊針頭。</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
 
-<p>當雞乸喺地下見到老鷹隻影仔嘅時候呢，佢就會警告自己嘅細蚊仔：“快啲匿埋吖！唔好响呢個空曠嘅地方度。”班細蚊仔就會答佢話：“我哋先至冇咁傻啦，我哋會走㗎。”</p>
+<p>當雞乸喺地下見到老鷹個影嘅時候呢，佢就會警告自己嘅細蚊仔：「快啲匿埋吖！唔好响呢個空曠嘅地方度。」班細蚊仔就會答佢話：「我哋先至冇咁傻啦，我哋會走㗎。」</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
