--- a/stories/yue/0201_驢仔.html
+++ b/stories/yue/0201_驢仔.html
@@ -49,49 +49,49 @@ Lindiwe Matshikiza<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/02.jpg" /></p>
 
-<p>係一個小女仔最先發現咗遠處有隻好出奇嘅影仔喺度。</p>
+<p>有個女仔最先發現遠處有個好奇怪嘅影喺度。</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/03.jpg" /></p>
 
-<p>嗰隻影仔越嚟越近，佢終於睇清楚咗嘞，嗰個係一個就快要生仔嘅女人。</p>
+<p>嗰個影越嚟越近，佢終於睇清楚咗嘞，係一個就快要生仔嘅女人。</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
 
-<p>小女仔有啲怕醜，但佢都係好勇敢噉樣走咗上前。同小女仔隨行嘅人就話：“我哋一定要同佢留喺一齊，我哋一定要保護佢同埋佢個仔。”</p>
+<p>個女仔有啲怕醜，但佢都係好勇敢噉樣走上前。同女仔隨行嘅人就話：「我哋一定要同佢一齊，一定要保護佢同埋佢個仔。」</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/05.jpg" /></p>
 
-<p>個仔好快就要出世㗎嘞。“大力啲吖！”“快啲攞條毛氈嚟！”“水！”“再大力啲！”</p>
+<p>個仔好快就要出世㗎嘞。「大力啲吖！」「快啲攞條毛氈嚟！」「水！」「再大力啲！」</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/06.jpg" /></p>
 
-<p>當佢哋見到嗰個仔嘅時候，所有人都嚇咗一跳，“一隻驢仔？”</p>
+<p>當佢哋見到個仔嘅時候，所有人都嚇咗一跳，「一隻驢仔？」</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
 
-<p>大家七嘴八舌噉嘈起上嚟。佢哋就話：“我哋講過要保護呢個媽咪同細蚊仔嘅，我哋一定要噉樣做。”但係仲有啲人力駁就話：“但係佢哋會俾我哋佗衰㗎。”</p>
+<p>大家七嘴八舌噉嘈起上嚟。佢哋就話：「我哋講過要保護呢個媽咪同細蚊仔嘅，講得出就要做得到。」但係仲有啲人就話：「但係佢哋會佗衰我哋㗎。」</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/08.jpg" /></p>
 
-<p>個女人發現自己又係孤零零一個人嘞。佢唔知道應該攞呢個怪仔點算，佢亦都唔知道自己應該點算。</p>
+<p>個女人發現自己又係孤零零一個人嘞。佢唔知道點湊個咁怪嘅仔，亦都唔知道自己應該點算。</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -105,35 +105,35 @@ Lindiwe Matshikiza<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
 
-<p>如果呢個仔一直都係咁大嘅啫，唔會大個仔嘅話，一切都會變得唔同晒。但係呢個驢仔越長越大，而家佢再又唔能夠俾媽咪孭住喺背脊上面。無論佢幾努力，佢始終唔可以似翻人類噉樣。佢嘅媽咪癐咗，放棄咗。有啲時，佢仲會叫佢做埋啲動物先至會做嘅粗重嘢。</p>
+<p>如果個仔一直都係咁細，唔會長大嘅話，所有嘢都會易話為啲。但係隻驢仔越長越大，再唔能夠俾媽咪孭住喺背脊上面。無論佢幾努力，始終模仿唔到人類嘅行為。佢媽咪經常會覺得又癐又𤷪。有時，佢仲會叫佢做埋啲動物先至會做嘅粗重嘢。</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
 
-<p>驢仔覺得好迷茫，又好勞氣。佢噉樣又唔得，嗰樣又唔得。有日呢，佢大發雷霆，一腳就踢佢媽咪落地下。</p>
+<p>驢仔覺得好迷茫，又好勞氣。成日呢樣又唔得，嗰樣又唔得。有一日，佢大發雷霆，一腳就踢佢媽咪落地下。</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/12.jpg" /></p>
 
-<p>驢仔又羞又愧，佢唯有走甩咗，走得越遠越好。</p>
+<p>驢仔覺得好羞家，唯有離家出走，走得越遠越好。</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
 
-<p>當佢停低落嚟嘅時候呢，天都已經黑晒，驢仔蕩失路嘞。佢喺暗黑中“哼哼”聲叫住，暗黑中傳翻嚟咗回聲，“哼哼”。佢孤零零一支公，卷成咗一團，心中充滿煩惱，就淰淰噉瞓著咗。</p>
+<p>當佢停低落嚟嘅時候呢，天都已經黑晒，驢仔蕩失路嘞。佢喺暗黑中「哼哼」聲叫住，暗黑中傳返嚟咗回聲，「哼哼」。佢孤零零一支公，卷成咗一團，心中充滿煩惱，就淰淰噉瞓著咗。</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/14.jpg" /></p>
 
-<p>驢仔醒翻嚟就發現有個老人耷低頭望住佢。佢睇住老人對眼，感覺到咗一絲希望。</p>
+<p>驢仔醒返嚟就發現有個老人耷低頭望住佢。佢睇住老人對眼，感覺到咗一絲希望。</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
@@ -175,7 +175,7 @@ Lindiwe Matshikiza<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
 
-<p>驢仔搵到咗佢嘅媽咪，佢孤零零一個人，正喺度為佢走失嘅細蚊仔而傷心。佢哋互相打量咗好耐，然之後緊緊噉抱住喺咗一齊。</p>
+<p>驢仔搵到佢嘅媽咪，佢孤零零一個人，正喺度為佢走失嘅仔仔而傷心。佢哋凝望住對方好耐，然之後緊緊噉擁抱。</p>
 
 <div class="pagenum">19</div>
 <p></div><div class="pagebreak"></p>
