--- a/stories/yue/0210_丁支同班牛.html
+++ b/stories/yue/0210_丁支同班牛.html
@@ -91,7 +91,7 @@ Ingrid Schechter<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/08.jpg" /></p>
 
-<p>班士兵嗰個時候就翻嚟咗。</p>
+<p>跟住班士兵就返嚟。</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Ingrid Schechter<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/10.jpg" /></p>
 
-<p>有個士兵踩到咗丁支藏身嘅樹葉上便，但係丁支都冇出聲。</p>
+<p>有個士兵踩到丁支藏身嘅樹葉上面，但係丁支都冇出聲。</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Ingrid Schechter<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/12.jpg" /></p>
 
-<p>佢哋靜雞雞爬翻屋企。</p>
+<p>佢哋靜雞雞爬返屋企。</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
