--- a/stories/yue/0302_火.html
+++ b/stories/yue/0302_火.html
@@ -77,7 +77,7 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>粵語</div><div
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
 
-<p>火可以俾火光。</p>
+<p>火可以照明。</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>粵語</div><div
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/09.jpg" /></p>
 
-<p>又好有權勢。</p>
+<p>又好大威力。</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
