--- a/stories/yue/0315_沙基馬嘅歌聲_slides.html
+++ b/stories/yue/0315_沙基馬嘅歌聲_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/02.jpg" /></p>
-<p>沙基馬同佢爹地媽咪，仲有四歲嘅細妹一齊住，佢哋住喺一個富人嘅土地上，佢哋間茅草屋喺一排大樹後面。</p>
+<p>沙基馬同佢爹哋媽咪，仲有四歲嘅細妹一齊住，佢哋住喺一個有錢人嘅土地上，佢哋間茅草屋喺一排大樹後面。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/03.jpg" /></p>
-<p>沙基馬三歲嗰陣時，佢生咗場大病，由此，沙基馬就睇唔到嘢嘞。沙基馬係一個非常之有天賦嘅細蚊仔。</p>
+<p>沙基馬三歲嗰陣病得好嚴重，自此，沙基馬就睇唔到嘢嘞。沙基馬係一個非常之有天賦嘅細蚊仔。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/04.jpg" /></p>
-<p>沙基馬今年六歲，佢識做好多同齡男仔唔識做嘅嘢，例如，沙基馬識得同條村入便嘅長老坐喺一齊討論啲好重大嘅問題。</p>
+<p>沙基馬今年六歲，佢識做好多同齡男仔唔識做嘅嘢，例如，沙基馬識得同條村入面嘅長老坐埋一齊討論啲好重大嘅問題。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/05.jpg" /></p>
-<p>沙基馬爹地媽咪喺富人屋企度做嘢。佢哋每日早出晚歸，沙基馬就同細妹一齊留喺屋企。</p>
+<p>沙基馬爹哋媽咪喺有錢人屋企度做嘢。佢哋每日早出晚歸，沙基馬就同細妹一齊留喺屋企。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/06.jpg" /></p>
-<p>沙基馬好鍾意唱歌。有日呢，佢媽咪就問佢：“沙基馬吖，你係邊度學唱呢啲歌呢？”</p>
+<p>沙基馬好鍾意唱歌。有日呢，佢媽咪就問佢：「沙基馬吖，你係邊度學唱呢啲歌呢？」</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/07.jpg" /></p>
-<p>沙基馬回答佢就話：“佢哋就係噉出現喺我腦海入便，我心裡便聽到呢啲歌，就噉唱佢哋出嚟啦。”</p>
+<p>沙基馬就答佢：「佢哋自己出現喺我腦海入面，我心裡便聽到呢啲歌，就唱出嚟囉。」</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/08.jpg" /></p>
-<p>沙基馬好鍾意俾佢細妹唱歌，特別係細妹佢好肚餓嘅時候。細妹聽住沙基馬唱佢最鍾意嘅歌，跟住甜美嘅歌聲擺動起上嚟。</p>
+<p>沙基馬好鍾意唱歌俾佢細妹聽，特別係佢好肚餓嗰陣。細妹聽住沙基馬唱佢最鍾意嘅歌，就跟住甜美嘅歌聲擺動起上嚟。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/09.jpg" /></p>
-<p>沙基馬嘅細妹成日噅佢：“再唱一次啦！”噉沙基馬就一遍又一遍唱俾佢聽。</p>
+<p>沙基馬嘅細妹成日噅佢：「再唱一次啦！」噉沙基馬就重覆又重覆噉唱俾佢聽。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/10.jpg" /></p>
-<p>有日夜晚黑，沙基馬爹地媽咪翻到屋企之後就粒聲都唔出。沙基馬知道一定發生咗唔知咩嘢唔好嘅事。</p>
+<p>有日夜晚黑，沙基馬爹哋媽咪返到屋企之後就粒聲都唔出。沙基馬知道一定有嘢唔對路。</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/11.jpg" /></p>
-<p>沙基馬問爹地媽咪發生咗咩事，佢噉先至知道，原來富人個仔失蹤咗，富人孤單一個人，好傷心。</p>
+<p>沙基馬問爹哋媽咪發生咗咩事，佢噉先至知道，原來有錢人個仔失咗蹤，得返佢孤單一個人，好傷心。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
-<p>沙基馬同爹地媽咪就話：“我可以俾佢唱歌，噉佢可能就會開心翻啦。”但係沙基馬爹地媽咪唔鍾意呢個主意：“佢好有錢，噉你淨係一個睇唔到嘢嘅小男仔。唔通你把歌聲會幫到佢咩？”</p>
+<p>沙基馬同爹哋媽咪就話：「我可以唱歌俾佢聽，噉佢可能就會開心返啦。」但係沙基馬爹哋媽咪唔鍾意呢個主意：「佢好有錢㗎，而你只係一個睇唔到嘢嘅細路仔。唔通你嘅歌聲會幫到佢咩？」</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/13.jpg" /></p>
-<p>但係沙基馬都冇放棄，佢細妹亦都鼓勵咗佢。佢就話：“沙基馬把歌聲能趕走飢餓，佢肯定亦都能安慰富人。”</p>
+<p>但係沙基馬都冇放棄，佢細妹亦都鼓勵佢。佢就話：「沙基馬嘅歌聲既然趕得走飢餓，肯定亦都能夠安慰有錢人。」</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/14.jpg" /></p>
-<p>第二日，沙基馬等佢細妹帶佢去富人屋企嗰便。</p>
+<p>第二日，沙基馬等佢細妹帶佢去有錢人屋企嗰便。</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/15.jpg" /></p>
-<p>佢企喺一隻大窗下便，開始唱起佢最鍾意嘅歌。慢慢，富人嘅頭殼由窗口入便伸咗出嚟。</p>
+<p>佢企喺一隻大窗下面，開始唱起佢最鍾意嘅歌。慢慢，有錢人嘅頭由窗口入面伸咗出嚟。</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/16.jpg" /></p>
-<p>班工人停低咗唔做嘢。佢哋好小心聽住沙基馬唱歌。有一個人就話：“從來都冇人能夠安慰老細，呢個睇唔到嘢嘅男仔覺得佢可以做得到咩？”</p>
+<p>班工人停低咗唔做嘢。佢哋好小心聽住沙基馬唱歌。有一個人就話：「從來都冇人能夠安慰老細，唔通呢個睇唔到嘢嘅男仔覺得佢可以？」</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/17.jpg" /></p>
-<p>沙基馬唱完咗首歌，準備離開。不過個個富人走咗出嚟，就話：“唔該你再唱一遍啦！”</p>
+<p>沙基馬唱完咗首歌，準備離開。不過嗰個有錢人走咗出嚟，就話：「唔該你再唱一次啦！」</p>
 <center>
 <strong>16</strong>
 </center>
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/18.jpg" /></p>
-<p>就喺嗰個時候，兩個人抬張擔架嚟到咗，擔架上就係富人個仔！佢哋發現咗呢個人被打到面目全非，留低喺路邊。</p>
+<p>就喺嗰個時候，有兩個人抬住張擔架嚟到，擔架上嘅就係有錢人個仔！佢俾人發現嘅時候已經被人打到面目全非，留低喺路邊。</p>
 <center>
 <strong>17</strong>
 </center>
@@ -250,7 +250,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/19.jpg" /></p>
-<p>富人再見翻佢個仔好開心。為咗感謝沙基馬安慰佢，佢將沙基馬同佢個仔一齊送去咗醫院，沙基馬好快就會恢復視力喇。</p>
+<p>有錢人再見返佢個仔好開心。為咗感謝沙基馬安慰佢，佢將沙基馬同佢個仔一齊送去咗醫院，沙基馬好快就會恢復視力喇。</p>
 <center>
 <strong>18</strong>
 </center>
