--- a/stories/yue/0342_懲罰.html
+++ b/stories/yue/0342_懲罰.html
@@ -56,21 +56,21 @@ Adelheid Marie Bwire<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
 
-<p>我哋都問吓佢：“幾時可以食生果呀？”媽咪就話：“我哋要等到今晚先食啦。”</p>
+<p>我哋問：「幾時可以食生果呀？」媽咪就話：「我哋今晚先有得食。」</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
 
-<p>我大佬拉希姆好為食，所有嘅生果都想試吓。結果佢食咗好多。</p>
+<p>我大佬拉希姆好貪心，樣樣生果都想試吓，結果食咗好多。</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
 
-<p>細佬叫住話：“睇吓拉希姆做咗乜嘢吖！”。我跟住就話：“拉希姆好曳好自私。”</p>
+<p>細佬大叫：「睇吓拉希姆做嘅好事！」。我跟住就話：「拉希姆好曳好自私。」</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,49 +84,49 @@ Adelheid Marie Bwire<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
 
-<p>我哋亦都好嬲拉希姆。但係拉希姆都唔感到慚愧。</p>
+<p>我哋亦都好嬲拉希姆，但係拉希姆一啲都唔慚愧。</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
 
-<p>小細佬就問：“拉希姆唔係應該罰呀嘛？”</p>
+<p>小細佬就問：「你會唔會罰拉希姆呀？」</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
 
-<p>媽咪就警告話：“拉希姆，你好快就會後悔㗎啦。”</p>
+<p>媽咪就警告拉希姆：「你好快就會後悔㗎啦。」</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
 
-<p>冇幾耐，拉希姆果然開始感到肉酸起上嚟。</p>
+<p>冇幾耐，拉希姆果然開始唔舒服。</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
 
-<p>拉希姆好細聲就話：“我個肚好痛。”</p>
+<p>拉希姆細細聲話：「我個肚好痛呀。」</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
 
-<p>媽咪預咗會發生呢啲噉嘅嘢。拉希姆正受到生果嘅懲罰！</p>
+<p>媽咪預咗會噉樣嘅。拉希姆正受到生果嘅懲罰！</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
 
-<p>後來，拉希姆同我哋道歉話：“第時我唔會再為食喇。”我哋今次都信佢啦！</p>
+<p>後來，拉希姆同我哋道歉話：「我以後唔會再咁貪心㗎喇。」我哋全部人都相信佢。</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
